components/network/cilium/gateway/nodeport-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: cilium-gateway-internet-gateway
  namespace: default
spec:
  # You MUST explicitly set this to LoadBalancer.
  # Otherwise, Kubernetes assumes it's a ClusterIP and rejects the nodePorts below.
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
    - name: https
      port: 443
      targetPort: 443
      nodePort: 30443
